restructuring and tidy ups

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,14 @@ backlight = 1
 width = 800
 height = 480
 file = current.png
-polling = 5
+polling = 3
+vid = 0x1908
+pid = 0x0102
 
 [DASHBOARD]
-file = system-dashboard.png
-poll = true
+file = dashboard.png
+save_to_file = false
+enabled = true
+
+[LOGGING]
+level = info
