--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-x206LCD"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [lib]
 name = "ax206lcd"
@@ -19,7 +19,7 @@ rusb = "0.9"
 image = "0.24"
 imageproc = "0.23"
 # System information
-sysinfo = "0.29"
+sysinfo = "0.34.2"
 # Configuration
 config = "0.13"
 serde = { version = "1.0", features = ["derive"] }
@@ -42,7 +42,8 @@ rusttype = "0.9"
 tokio = { version = "1.36", features = ["full"] }
 systemstat = "0.2.4"
 serde_json = "1.0.140"
-ordermap = "0.5.7"
+indexmap = { version = "2.1.0", features = ["serde"] }
+rev_buf_reader = "0.3.0"
 
 [dev-dependencies]
 # Testing utilities
