--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
+
     - name: Run tests
       run: cargo test --verbose
+
+    - name: Upload test results
+      if: success() || failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: target/debug/deps/*.d
+
+    - name: Build (Release)
+      run: cargo build --release --verbose
+
+    - name: Upload artefact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ax206lcd
+        path: target/release/ax206lcd
